[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "birsvd"
version = "0.1"
description = "Bayesian Iterative Randomized SVD for weighted low-rank matrix approximation"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }
authors = [
    { name = "Ryou Ohsawa", email = "ohsawa@ioa.s.u-tokyo.ac.jp" }
]
maintainers = [
    { name = "Ryou Ohsawa", email = "ohsawa@ioa.s.u-tokyo.ac.jp" }
]
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "scipy",
    "scikit-learn",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Topic :: Scientific/Engineering :: Astronomy",
]

[project.urls]
Homepage = "https://bitbucket.org/ryou_ohsawa/birsvd/src/master/"
