[build-system]
requires = [
  "setuptools>=64",
]
build-backend = "setuptools.build_meta"

[project]
name = "birsvd"
description = "Bi-Iterative Regularized Singular Value Decomposition for weighted low-rank matrix approximation"
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
authors = [
  { name = "Ryou Ohsawa", email = "ryou.ohsawa@nao.ac.jp" }
]
maintainers = [
  { name = "Ryou Ohsawa", email = "ryou.ohsawa@nao.ac.jp" }
]
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "scipy",
  "scikit-learn",
]
dynamic = ["version"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Astronomy",
]

[project.urls]
Homepage = "https://github.com/astronasutarou/birsvd"

[tool.setuptools.packages.find]
include = ["birsvd*"]

[tool.setuptools.dynamic]
version = { attr = "birsvd.__version__" }

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-*"
skip = "*-musllinux* pp*"
test-command = "python -c \"import birsvd; print(birsvd.__file__)\""
